--- a/02-PO33Q.html
+++ b/02-PO33Q.html
@@ -122,8 +122,6 @@ div.csl-indent {
     "search-label": "Search"
   }
 }</script>
-<script src="site_libs/kePrint-0.0.1/kePrint.js"></script>
-<link href="site_libs/lightable-0.0.1/lightable.css" rel="stylesheet">
 <meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: dark)">
 <meta name="theme-color" content="#1d1f2b" media="(prefers-color-scheme: light)">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -1065,159 +1063,161 @@ Figure&nbsp;22: Adjusted R-squared location
 <h1 class="unnumbered">Glossary</h1>
 <p>&nbsp;</p>
 <div class="glossary-table">
-<div class="cell">
-<div id="tbl-glossary2" class="cell quarto-float quarto-figure quarto-figure-center anchored">
+<div class="cell" data-tbl-colwidths="[25,75]">
+<div id="tbl-glossary2" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-tbl-colwidths="[25,75]">
 <figure class="quarto-float quarto-float-tbl figure">
 <div aria-describedby="tbl-glossary2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
-<table class="table do-not-create-environment cell table-sm table-striped small" data-quarto-postprocess="true">
+<table class="cell table table-sm table-striped small">
+<colgroup>
+<col style="width: 25%">
+<col style="width: 75%">
+</colgroup>
 <thead>
 <tr class="header">
-<th style="text-align: left;" data-quarto-table-cell-role="th">Term</th>
-<th style="text-align: left;" data-quarto-table-cell-role="th">Description</th>
+<th style="text-align: left;">Term</th>
+<th style="text-align: left;">Description</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">adjusted rsquared</td>
+<td style="text-align: left;">adjusted rsquared</td>
 <td style="text-align: left;">The coefficient of determination for multiple regression.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">autocorrelation</td>
+<td style="text-align: left;">autocorrelation</td>
 <td style="text-align: left;">The value of one error term does not allow us to predict the value of another error term. As such their covariances must be zero</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">causality</td>
+<td style="text-align: left;">causality</td>
 <td style="text-align: left;">In order to establish a causal relationship, the following criteria must be met concurrently: 1. Relevance of the variables within the broader theoretical and empirical context of the research (a) Clear Theoretical Framework, (b) Clear conceptualization, (c) Exclusion of alternative explanations; 2. Asymmetry; 3. Significant (and sufficiently strong) statistical association</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">ceteris paribus</td>
+<td style="text-align: left;">ceteris paribus</td>
 <td style="text-align: left;">All other things being equal</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">coefficient</td>
+<td style="text-align: left;">coefficient</td>
 <td style="text-align: left;">A coefficient is a numerical expression which is multiplied with the value of a variable</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">coefficient of determination</td>
-<td style="text-align: left;">Indicates the proportion of the variation in the dependent variable which is explained through the independent variable. It is defined as $\frac{\text{Explained Sum of Squares}}{\text{Total Sum of Squares}}$</td>
+<td style="text-align: left;">coefficient of determination</td>
+<td style="text-align: left;">Indicates the proportion of the variation in the dependent variable which is explained through the independent variable. It is defined as <span class="math inline">\(\frac{\text{Explained Sum of Squares}}{\text{Total Sum of Squares}}\)</span></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">conditional expectation function</td>
+<td style="text-align: left;">conditional expectation function</td>
 <td style="text-align: left;">see Population Regression Function (PRF)</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">confidence interval</td>
-<td style="text-align: left;">A confidence interval is an estimated range, based on a sample, that is likely to contain the true population parameter (such as the mean). If the sampling process were repeated many times, approximately \( (1 - \alpha) \times 100\% \) of the resulting intervals would contain the true parameter. The value of \( \alpha \) determines the \textit{confidence level} -- for example, \( \alpha = 0.05 \) corresponds to a 95\% confidence level, while \( \alpha = 0.01 \) corresponds to 99\%</td>
+<td style="text-align: left;">confidence interval</td>
+<td style="text-align: left;">A confidence interval is an estimated range, based on a sample, that is likely to contain the true population parameter (such as the mean). If the sampling process were repeated many times, approximately ( (1 - ) % ) of the resulting intervals would contain the true parameter. The value of ( ) determines the – for example, ( = 0.05 ) corresponds to a 95% confidence level, while ( = 0.01 ) corresponds to 99%</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">confidence level</td>
-<td style="text-align: left;">The confidence level is the proportion of confidence intervals, constructed from repeated random samples of the same population using the same method, that are expected to contain the true population parameter. It is denoted by \( 1 - \alpha \), where \( \alpha \) is the significance level. For example, a 95\% confidence level implies that 95\% of such intervals would contain the true parameter in the long run.</td>
+<td style="text-align: left;">confidence level</td>
+<td style="text-align: left;">The confidence level is the proportion of confidence intervals, constructed from repeated random samples of the same population using the same method, that are expected to contain the true population parameter. It is denoted by ( 1 - ), where ( ) is the significance level. For example, a 95% confidence level implies that 95% of such intervals would contain the true parameter in the long run.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">degrees of freedom</td>
+<td style="text-align: left;">degrees of freedom</td>
 <td style="text-align: left;">Degrees of freedom express constraints on our estimation process by specifying how many values in the calculation are free to vary</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">error term</td>
-<td style="text-align: left;">The error term quantifies the distance between each observation and the corresponding point on the regression line. The terms are denoted as $\epsilon_{i}$</td>
+<td style="text-align: left;">error term</td>
+<td style="text-align: left;">The error term quantifies the distance between each observation and the corresponding point on the regression line. The terms are denoted as <span class="math inline">\(\epsilon_{i}\)</span></td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">intercept</td>
-<td style="text-align: left;">The intercept is the point at which the regression line intersects the y-axis. In this book we denote it as $\beta_{0}$</td>
+<td style="text-align: left;">intercept</td>
+<td style="text-align: left;">The intercept is the point at which the regression line intersects the y-axis. In this book we denote it as <span class="math inline">\(\beta_{0}\)</span></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">normal distribution</td>
-<td style="text-align: left;">The normal distribution is a bell-shaped probability distribution that is symmetrical around the mean. Approximately 68\% of values fall within 1 standard deviation of the mean, 96\% within 2 standard deviations, and 99.7\% within 3 standard deviations. This is known as the empirical rule.</td>
+<td style="text-align: left;">normal distribution</td>
+<td style="text-align: left;">The normal distribution is a bell-shaped probability distribution that is symmetrical around the mean. Approximately 68% of values fall within 1 standard deviation of the mean, 96% within 2 standard deviations, and 99.7% within 3 standard deviations. This is known as the empirical rule.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">Ordinary Least Squares</td>
+<td style="text-align: left;">Ordinary Least Squares</td>
 <td style="text-align: left;">The method of fitting a regression line by means of minimizing the sum of the squared distances between the observations and the estimated values</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">p-value</td>
-<td style="text-align: left;">The p-value indicates the probability of obtaining a result equal to, or even more extreme than the observed value, assuming the null hypothesis is true. Common thresholds for significance are 0.05, 0.01, and 0.001. A smaller p-value suggests stronger evidence against the null hypothesis. The p-value is denoted as $p$.</td>
+<td style="text-align: left;">p-value</td>
+<td style="text-align: left;">The p-value indicates the probability of obtaining a result equal to, or even more extreme than the observed value, assuming the null hypothesis is true. Common thresholds for significance are 0.05, 0.01, and 0.001. A smaller p-value suggests stronger evidence against the null hypothesis. The p-value is denoted as <span class="math inline">\(p\)</span>.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">parameter</td>
+<td style="text-align: left;">parameter</td>
 <td style="text-align: left;">A parameter is the value a statistic would assume in the long run. It is also called the Expected Value</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">partial slope coefficient</td>
+<td style="text-align: left;">partial slope coefficient</td>
 <td style="text-align: left;">A partial slope coefficient measures the influence of a variable in multiple regression, holding all other independent variables in the model constant</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">population</td>
+<td style="text-align: left;">population</td>
 <td style="text-align: left;">Collection of all cases which possess certain pre-defined characteristics</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">Population Regression Function</td>
-<td style="text-align: left;">The Population Regression Function (PRF) describes the expected distribution of $y$, given the values of the independent variable(s) $x$. It is also called the conditional expectation function (CEF) and can be denoted as $E(y_{i} \mid x_{i})$</td>
+<td style="text-align: left;">Population Regression Function</td>
+<td style="text-align: left;">The Population Regression Function (PRF) describes the expected distribution of <span class="math inline">\(y\)</span>, given the values of the independent variable(s) <span class="math inline">\(x\)</span>. It is also called the conditional expectation function (CEF) and can be denoted as <span class="math inline">\(E(y_{i} \mid x_{i})\)</span></td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">probability</td>
+<td style="text-align: left;">probability</td>
 <td style="text-align: left;">Refers to how many times out of a total number of cases a particular event occurs. We can also see it as the chance of a particular event occurring</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">probability distribution</td>
+<td style="text-align: left;">probability distribution</td>
 <td style="text-align: left;">Specifies the likelihood of all possible outcomes for a particular variable</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">regression</td>
+<td style="text-align: left;">regression</td>
 <td style="text-align: left;">Regression analysis determines the direction and magnitude of influence of one or more independent variables on a dependent variable</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">regression line</td>
-<td style="text-align: left;">The regression line describes how the dependent variable is functionally related to the values of the independent variable. It it defined by the intercept $\beta_{0}$ and the slope $\beta_{1}$</td>
+<td style="text-align: left;">regression line</td>
+<td style="text-align: left;">The regression line describes how the dependent variable is functionally related to the values of the independent variable. It it defined by the intercept <span class="math inline">\(\beta_{0}\)</span> and the slope <span class="math inline">\(\beta_{1}\)</span></td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">residual</td>
-<td style="text-align: left;">An estimation of the error term. The difference between an observation $y_{i}$ and the estimated value $\hat{y}_{i}$. Denoted as $\hat{\epsilon}_{i}$</td>
+<td style="text-align: left;">residual</td>
+<td style="text-align: left;">An estimation of the error term. The difference between an observation <span class="math inline">\(y_{i}\)</span> and the estimated value <span class="math inline">\(\hat{y}_{i}\)</span>. Denoted as <span class="math inline">\(\hat{\epsilon}_{i}\)</span></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">sample</td>
+<td style="text-align: left;">sample</td>
 <td style="text-align: left;">A sub-group of the population</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">Sample Regression Function</td>
+<td style="text-align: left;">Sample Regression Function</td>
 <td style="text-align: left;">A regression line based on a randomly drawn sample</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">significance level</td>
-<td style="text-align: left;">The significance level, denoted by $\alpha$, is the threshold used in hypothesis testing to determine if a result is statistically significant. It represents the probability of rejecting the null hypothesis when it's actually true (a Type I error). Common levels are 0.05 or 0.01, indicating 5\% or 1\% risk. We will cover this properly in Week 9.</td>
+<td style="text-align: left;">significance level</td>
+<td style="text-align: left;">The significance level, denoted by <span class="math inline">\(\alpha\)</span>, is the threshold used in hypothesis testing to determine if a result is statistically significant. It represents the probability of rejecting the null hypothesis when it’s actually true (a Type I error). Common levels are 0.05 or 0.01, indicating 5% or 1% risk. We will cover this properly in Week 9.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">significance test</td>
+<td style="text-align: left;">significance test</td>
 <td style="text-align: left;">A significance test is a statistical method used to determine whether observed data provide enough evidence to reject a null hypothesis. It calculates a probability of observing data as extreme as, or more extreme than, the actual sample results, assuming the null hypothesis is true</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">slope</td>
-<td style="text-align: left;">A slope is defined as rise over run, and so it tells us how many units of y we need to climb (or descend if the slope is negative) for every additional unit of the independent variable $x$</td>
+<td style="text-align: left;">slope</td>
+<td style="text-align: left;">A slope is defined as rise over run, and so it tells us how many units of y we need to climb (or descend if the slope is negative) for every additional unit of the independent variable <span class="math inline">\(x\)</span></td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">standard error</td>
-<td style="text-align: left;">The standard deviation of the sampling distribution. It is defined as:\begin{equation*}\sigma_{\bar{y}} = \frac{\sigma}{\sqrt{n}}\end{equation*}</td>
+<td style="text-align: left;">standard error</td>
+<td style="text-align: left;">The standard deviation of the sampling distribution. It is defined as:<span class="math display">\[\begin{equation*}\sigma_{\bar{y}} = \frac{\sigma}{\sqrt{n}}\end{equation*}\]</span></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">t-distribution</td>
+<td style="text-align: left;">t-distribution</td>
 <td style="text-align: left;">The t-Distribution is bell-shaped and symmetrical around a mean of zero. Its shape is dependent on the degrees of freedom in the estimation process.</td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">test statistic</td>
-<td style="text-align: left;">A test statistic is a value calculated from the sample data that is used to decide whether to reject the null hypothesis (H$_0$) in a hypothesis test. It quantifies the degree to which the observed data diverges from what is expected under the null hypothesis. In a t-test, the test statistic is a t-value, which measures the distance between the sample mean and the (hypothesised) population mean, expressed in units of standard errors.</td>
+<td style="text-align: left;">test statistic</td>
+<td style="text-align: left;">A test statistic is a value calculated from the sample data that is used to decide whether to reject the null hypothesis (H<span class="math inline">\(_0\)</span>) in a hypothesis test. It quantifies the degree to which the observed data diverges from what is expected under the null hypothesis. In a t-test, the test statistic is a t-value, which measures the distance between the sample mean and the (hypothesised) population mean, expressed in units of standard errors.</td>
 </tr>
 <tr class="odd">
-<td style="text-align: left; min-width: 1.25in;">time-series data</td>
-<td style="text-align: left;">Time-series data review a certain characteristic over time $t$, where $t$ runs from 1 to $T$</td>
+<td style="text-align: left;">time-series data</td>
+<td style="text-align: left;">Time-series data review a certain characteristic over time <span class="math inline">\(t\)</span>, where <span class="math inline">\(t\)</span> runs from 1 to <span class="math inline">\(T\)</span></td>
 </tr>
 <tr class="even">
-<td style="text-align: left; min-width: 1.25in;">z-score</td>
+<td style="text-align: left;">z-score</td>
 <td style="text-align: left;">The z-score, sometimes also referred to as z-value, expresses in units of standard deviation how far an observation of interest falls away from the mean.</td>
 </tr>
 </tbody>
 </table>
-
-
 </div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-tbl" id="tbl-glossary2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
